--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=DEBUG, console, file
+log4j.rootLogger=INFO, console, file
 
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 
@@ -10,7 +10,7 @@ log4j.appender.console.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{
 
 log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
 
-log4j.appender.file.File=target/output/logs/app.log.txt
+log4j.appender.file.File=target/output/logs/app.log
 
 log4j.appender.file.DatePattern='.'yyyy-MM-dd-HH
 
