--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -2,7 +2,7 @@ log4j.rootLogger=INFO, file
 
 log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
 
-log4j.appender.file.File=target/output/logs/test.log.txt
+log4j.appender.file.File=target/output/logs/test.log
 
 log4j.appender.file.DatePattern='.'yyyy-MM-dd-HH
 
