--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=INFO, file
+log4j.rootLogger=ERROR, file
 log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.file.File=target/output/logs/test.log
 log4j.appender.file.DatePattern='.'yyyy-MM-dd-HH
